    * [UIMA-1641] - Cas Processor integration was changed, but documentation not updated
    * [UIMA-1647] - Scripts fail to call runUimaClass.sh 
    * [UIMA-1650] - Bug in common launcher script causing UIMA_CLASSPATH to be ignored
    * [UIMA-1663] - All directories in UIMA distribution should be 755
    * [UIMA-1664] - Windows command line files not working
    * [UIMA-1668] - Update sample descriptor for cas editor test UI_009
    * [UIMA-1678] - Pear builder maven plugin should use "Package" mode of buildComponentClassPath 
    * [UIMA-1679] - UIMA scripts set memory options that override user's setiings

** Improvement
    * [UIMA-71] - New v2 features missing from tutorial chapters
    * [UIMA-420] - CVD should use encoding list provided by JVM
    * [UIMA-472] - CAS Editor: All annotation inside the editor should have a differnt default colors as its done in the "UIMA Annotation Viewer"
    * [UIMA-483] - JCas method like getSofaDataString that doesn't copy the chars from the StringHeap
    * [UIMA-518] - improve browser utilities to configured the used browser in UIMA
    * [UIMA-554] - Have produceResource for CollectionReaders operate like other Analysis Engines with respect to setup of type system
    * [UIMA-684] - update website with "How to do a release" 
    * [UIMA-767] - Use eclipse content types to identify annotators descriptors (.ann) and consumer descriptors (.con)
    * [UIMA-841] - move Eclipse feature maven builds into feature projects
    * [UIMA-857] - Change startup of framework to support versioned Jars and simplified classpath
    * [UIMA-961] - Cleanup - remove unused things
    * [UIMA-984] - Improve way we get required jar file javax.activation:activation:jar:1.0.2 for building from the source
    * [UIMA-1015] - Example using deprecated method
    * [UIMA-1048] - Eliminate compiler warings in CVD
    * [UIMA-1067] - Remove char heap/ref heap in StringHeap of the CAS
    * [UIMA-1068] - Use of the JCas cache should be configurable