@@ -179,7 +179,6 @@ issues you find at
   
 <h2><a name="list.issues">6. List of JIRA Issues Fixed in this Release</a></h2>
 
-
         Release Notes - UIMA - Version 2.3
         
 <h2>        Bug
@@ -429,11 +428,17 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1664'>UIMA-1664</a>] -         Windows command line files not working
 </li>
-<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1668'>UIMA-1668</a>] -         Update sample descriptor for cas editor test UI_009
-</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1678'>UIMA-1678</a>] -         Pear builder maven plugin should use &quot;Package&quot; mode of buildComponentClassPath 
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1679'>UIMA-1679</a>] -         UIMA scripts set memory options that override user's setiings
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1683'>UIMA-1683</a>] -         fix copyright notice in the NOTICE files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1687'>UIMA-1687</a>] -         correct top-level svn license/notice files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1688'>UIMA-1688</a>] -         Cas Editor throws NPE when cleaning a document which is opened
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1690'>UIMA-1690</a>] -         After cleaning a document the outline view does not sync
 </li>
 </ul>
     
@@ -618,6 +623,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1613'>UIMA-1613</a>] -         run Rat consistently for all maven assemblies
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1689'>UIMA-1689</a>] -         fix some miscompares between svn export and source-distribution
+</li>
 </ul>
     
 <h2>        New Feature
@@ -664,6 +671,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1389'>UIMA-1389</a>] -         Remove OpenNLP example wrapper
 </li>
 </ul>
+    
     
 </body>
 </html>
